tests/NormalTests/paczka1/fuzzy1/16502904.err
Error in line 8: S362 A445 29,84
Error in line 5: S362 S362 61,3
Error in line 9: S362 A681 64,5
Error in line 23: mkJNV1 A445 87,0
Error in line 24: mkJNV1 S168 71,6
Error in line 18: LbFS A445 95,0
